@@ -4,6 +4,9 @@
 	(__sendto): Use create_address_port.  Initialize APORT and deallocate
 	it if not null.
 
+	* sysdeps/mach/hurd/llistxattr.c: New file, copied from listxattr.c
+	with O_NOLINK passed to __file_name_lookup.
+
 2012-07-20  Joseph Myers  <joseph@codesourcery.com>
 
 	* elf/Makefile (check-data): Remove.
